// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The head component for setting document title should render Get Started page title correctly 1`] = `
<title>
  Dummy product title | Get Started
</title>
`;

exports[`The head component for setting document title should render default title correctly 1`] = `
<title>
  Dummy product title
</title>
`;
